# LocalAssistant

./: .dockerignore  .gitignore  .npmrc  Dockerfile.backend  Dockerfile.backend.dev  Dockerfile.web  Dockerfile.web.dev  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: ChatSettings.tsx  ChatView.tsx  FilePanel.tsx  MessageInput.tsx  MessageList.tsx  SetupWizard.tsx  Sidebar.tsx
apps/desktop/src/context/: AppContext.tsx
apps/desktop/src/lib/: trpc.ts
docker/: nginx.conf
docker/searxng/: limiter.toml  settings.yml
scripts/: create-dev-stubs.mjs  download-ollama.mjs
