[package]
name = "local-assistant"
version = "0.1.0"
description = "LocalAssistant - Local AI Desktop Assistant"
authors = []
license = ""
repository = ""
default-run = "local-assistant"
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "local-assistant"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [
  "fs-read-file",
  "dialog-all",
  "fs-read-dir",
  "shell-open",
  "path-all",
  "process-exit",
  "window-all",
  "process-command-api",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
